# IFJ

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  error_code.h  gramatika_nova.docx  rozdeleni  symtable.c  symtable.h
dokumentace/: dokumentace.aux  dokumentace.tex  dokumentace.toc
interpret/: generateInstructions.ods  input1.ifj17  input2.ifj17  test_interpret1  test_interpret10_double  test_interpret11_stack  test_interpret12_vestavene_funkce  test_interpret2  test_interpret3_faktorial  test_interpret4_factorial_rekurzivne  test_interpret5_retezce  test_interpret5_retezce_funkce  test_interpret6_funkce  test_interpret7_global_variable  test_interpret7_retezce_funkce  test_interpret8_local_scope  test_interpret9_prazdny_retezec  vestavene_funkce.c
src/: Makefile  bintree.c  bintree.h  bintree_test.c  error_code.h  expression.c  expression.h  init.c  init.h  instList.c  instList.h  inst_list.c  inst_list.h  instlist.c  instlist.h  main.c  parser.c  parser.h  scanner.c  scanner.h  stack.c  stack.h  string.c  string.h  symtable.c  symtable.h  test.c
src/tests/: bintree_test.c  scanner_test  strcmp_strlen_test.c  test1.txt  test3.txt  test5.txt  test6.txt  test_scanner.c  tests_runner.sh
src/tests/old_tests/: bintree_test.c  strcmp_strlen_test.c
src/tests/old_tests/scanner/: scanner_test  test5.txt  test_scanner.c
src/tests/oldtests/: tests.c
src/tests/oldtests/scanner/: test6.txt
src/tests/scanner/: Makefile  test4.txt  test_scanner.c
tests/: Makefile  tests.c  vypocet_faktorialu_nerekurzivne.txt
tests/old_tests/: strcmp_strlen_test.c
tests/old_tests/scanner/: test2.txt  test_scanner.c
tests/scanner/: Makefile  scanner_test  scanner_tests.c  test3.txt
(+79 files in other folders)
